--- a/my_content.tex
+++ b/my_content.tex
@@ -46,7 +46,7 @@ This new reward system aims to mimic human-optimized doses better.
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=0.8\textwidth]{reward.pdf}
+	\includegraphics[width=0.9\textwidth]{reward.pdf}
 	\caption{Classical reinforcement learning reward for automatic dosimetry.}
 	\label{fig:reward_fig}
 \end{figure*}
@@ -105,9 +105,9 @@ Networks with such architecture show significantly better results on validation.
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=5cm]{architecture_all_actions.pdf}
+	\includegraphics[width=6cm]{architecture_all_actions.pdf}
 	\hspace{0.5cm}
-	\includegraphics[width=7cm]{losses-distance.pdf}
+	\includegraphics[width=8cm]{losses-distance.pdf}
 	\caption{Neural network architecture and Loss evolution while training.}
 	\label{fig:architecture}
 \end{figure*}
@@ -122,7 +122,15 @@ It is the combination of several sequential actions that allows good plan optimi
 Therefore, while testing, we choose the action with the best prediction, while passing the outlier test just mentioned.
 
 \section{Results}
-Our method was shown to outperform classical metric-based RL, as well as brute force meta optimization.
+Figure \ref{fig:distance} show how the distance between our RL agent's perform over five steps on 30 test patients (unseen during the training).
+A lower distance is interpreted as a better dose (as it is closer to the best dose: the clinical one).
+\begin{figure*}
+	\centering
+	\includegraphics[width=0.6\textwidth]{DistanceToClinicalDose.pdf}
+	\caption{Average distance between RL agent's dose and clinical dose.}
+	\label{fig:distance}
+\end{figure*}
+
 
 \subsection{Quantitative Results}
 The network was able to converge on the training data, and validation showed some minor overfitting.
@@ -146,12 +154,13 @@ On average, our model was able to reduce the dose distance with manually optimiz
 
 
 \subsection{Qualitative Results}
-Figure \ref{fig:steps} is the detail of the DVHs at each of the five steps of an optimization.
-Our model was able to reduce the dose distance with manually optimized dose by a factor of $10$ (from $1.94$ at iteration $1$ to $0.18$ at iteration $4$).
+Figure \ref{fig:steps} is the detail of the DVHs at each of the five steps of an optimization on one of the test patient (unseen by the agent during the training).
+Our model was able to drastically reduce the dose distance with manually optimized dose.
+Visual inspection of the DVHs plot can show that the dose optimized by the RL agent is very close to the clinical (manually fine-tuned) one.
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=0.24\textwidth]{steps/distance-test-w1.pdf}	\includegraphics[width=0.24\textwidth]{steps/distance-test-w2.pdf}	\includegraphics[width=0.24\textwidth]{steps/distance-test-w3.pdf}	\includegraphics[width=0.24\textwidth]{steps/distance-test-w4.pdf}
+	\includegraphics[width=0.49\textwidth]{steps/distance-test-w1.pdf}	\includegraphics[width=0.49\textwidth]{steps/distance-test-w2.pdf}	\includegraphics[width=0.49\textwidth]{steps/distance-test-w3.pdf}	\includegraphics[width=0.49\textwidth]{steps/distance-test-w4.pdf}
 	\caption{RL Agent DVHs after each action taken on a test (unseen) patient. Solid lines are the agent's dose DVHs; dotted ones are the reference dose DVHs (manually fine-tuned).}
 	\label{fig:steps}
 \end{figure*}
@@ -196,18 +205,19 @@ Likewise, we generate five organs gravitating around the PTV, aligned on the axi
 
 \begin{figure*}
 	\centering
-	\label{fig:main_slice-ct}	\includegraphics[height=3.5cm]{main_slice-ct.pdf}
-	\hspace{0.3cm}
+	\label{fig:main_slice-ct}	\includegraphics[height=5cm]{main_slice-ct.pdf}
+	\hspace{1cm}
 	\label{fig:main_slice-dose}
-	\includegraphics[height=3.5cm]{main_slice-dose.pdf}
-	\hspace{0.1cm}
+	\includegraphics[height=5cm]{main_slice-dose.pdf}
+%	\hspace{0.1cm}
+	\\
 	\label{fig:clinical_dvh}
-	\includegraphics[width=5cm]{dvh_example.pdf}
+	\includegraphics[width=10cm]{dvh_example.pdf}
 	\caption{
 		Example of a (generated) patient: \\
 		\textit{Left:} Main axial slice (center of the PTV) \textbf{CT}.\\
-		\textit{Center:} Main axial slice (center of the PTV) of the \textbf{clinical dose}. \\
-		\textit{Right:} Associated clinical dose \textbf{DVH}.
+		\textit{Right:} Main axial slice (center of the PTV) of the \textbf{clinical dose}. \\
+		\textit{Bottom:} Associated clinical dose \textbf{DVH}.
 	}
 	
 \end{figure*}
