AWC suggestion edit

--- a/my_content.tex
+++ b/my_content.tex
@@ -8,8 +8,7 @@ Despite this consensus, the way to deliver radiotherapy for its best result rema
 Moreover, there appears to be a large variability across physicians and centres, but in terms of 3D structures contouring and irradiation, constrains priorities \cite{variability_2021}.
 
 To achieve the best treatment, doctors must solve a complex inverse mathematical optimization problem with multiple trade-offs \cite{oelfke_inverse_2001} \cite{webb_physical_2003}.
-%However, a lack of standardization ...
-A lack of standardized prioritization of constraints makes the optimization a real challenge.
+However a lack of standardized prioritization of constraints makes the optimization a real challenge.
 The standard procedure nowadays is to guide computer optimization manually: dosimetrists manually update the settings of an optimizing software so-called Treatment Planning System (TPS) \cite{planification_website}.
 
 There have been many tries to create a metric that quantifies the quality of a treatment plan, such as Normal Tissue Complication Probabilities (NTCP), target coverage, conformity index, and heterogeneity index, among others/to name a few \cite{lyman_normal_1992} \cite{li_input_2022}\label{metrics}.
