added meta optim (& rerun...)

--- a/my_content.tex
+++ b/my_content.tex
@@ -142,10 +142,10 @@ On average, our model was able to reduce the dose distance with manually optimiz
 		\hline
 		Agent $\backslash$ Metric & Mean Final Distance$^*$ & Homogeneity Score$^\dagger$ & Conformity Score$^\dagger$ \\ 
 		\hline
-		RL Distance Score & \textbf{0.91} & 2.31 & 0.18 \\ 
-		RL Homogeneity Score & 2.31 & \textbf{5.17} & \textbf{0.5} \\
-		RL Conformity Score &  1.87  & 4.99 & 0.34 \\
-		Meta-optimization & 1.81 & 3.78 & 0.36 \\	
+		RL Distance Score & \textbf{0.612} & 1.871 & 0.406 \\ 
+		RL Homogeneity Score & 2.012 & \textbf{4.387} & 0.567 \\
+		RL Conformity Score &  1.781  & 4.232 & 0.451 \\
+		Meta-optimization & 1.279 & 4.117 & \textbf{0.610} \\	
 		\hline
 	\end{tabular}
 	\label{table:results}
