--- a/my_content.tex
+++ b/my_content.tex
@@ -98,9 +98,9 @@ This reward can be interpreted as the "distance gained to the clinical dose".
 We use a dense neural network, taking the DVHs and the current normalized weight values as inputs.
 It outputs the $Q(s, a)$ Value for each possible action $a$.
 Dense layers are very prone to overfitting.
-In order to force the network to actually predict the following evaluation for each possible action, without overfitting, we incorporated a bottleneck in the network [ref architecture figure].
+In order to force the network to actually predict the following evaluation for each possible action, without overfitting, we incorporated a bottleneck in the network (figure \ref{fig:architecture}).
 Compressing the information stops the network from overfitting.
-Networks with such architecture show significantly better results on validation.
+Networks with such architecture show very little difference between training and validation sets (see figure \ref{fig:losses_training}).
 
 \begin{figure*}
 	\centering
@@ -109,6 +109,7 @@ Networks with such architecture show significantly better results on validation.
 	\includegraphics[width=8cm]{losses-distance.pdf}
 	\caption{Neural network architecture and Loss evolution while training.}
 	\label{fig:architecture}
+	\label{fig:losses_training}
 \end{figure*}
 
 \subsection{Avoiding Off-Distribution}
