AWC discussion review

--- a/my_content.tex
+++ b/my_content.tex
@@ -166,17 +166,15 @@ Visual inspection of the DVHs plot can show that the dose optimized by the RL ag
 \end{figure*}
 
 \section{Discussion}
-Our study demonstrates the potential of deep reinforcement learning (RL) for automating radiotherapy treatment plan optimization.
+Our study demonstrates the potential of deep RL for automating radiotherapy treatment plan optimization.
 A key strength of our approach is its ability to learn from past treatment plans, capturing the complex decision-making processes of human dosimetrists.
 This data-driven approach avoids the limitations of pre-defined metrics, which may not fully capture the nuances of optimal treatment planning.
-%Additionally, directly predicting the subsequent state evaluation bypasses the need for reward shaping, which can be challenging in complex optimization tasks.
 
 However, our study also has limitations.
 The agent's performance relies on the quality and quantity of available training data.
 Cases with limited historical data or complex anatomical features may require additional strategies.
 Moreover, while the agent achieves promising results regarding dose distance reduction, the dose is not guaranteed to be clinically acceptable.
-Finally,  while this study demonstrates the promise of our RL approach in a controlled setting, extending it to real-world radiotherapy planning necessitates addressing additional complexities and constraints.
-
+Although this study demonstrates the promise of our RL approach in a controlled setting, one final limitation to mention is that extending it to real-world radiotherapy planning would necessitates addressing additional complexities and constraints.
 
 Several avenues exist for further research.
 Firstly, we plan to investigate strategies for incorporating additional information, such as patient characteristics and anatomical complexities, into the training process.
