--- a/my_content.tex
+++ b/my_content.tex
@@ -148,6 +148,7 @@ On average, our model was able to reduce the dose distance with manually optimiz
 			RL Homogeneity Score & 2.012 & \textbf{4.387} & 0.567 \\
 			RL Conformity Score &  1.781  & 4.232 & 0.451 \\
 			Meta-optimization & 1.279 & 4.117 & \textbf{0.610} \\
+			\textit{Clinical doses} & \textit{0} & \textit{1.541} & \textit{0.580} \\	
 			\hline
 		\end{tabular}
 		\label{table:results}
