--- a/my_content.tex
+++ b/my_content.tex
@@ -153,6 +153,9 @@ On average, our model was able to reduce the dose distance with manually optimiz
 		\end{tabular}
 		\label{table:results}
 	\end{center}
+	\caption{
+		Average performances of four algorithms tested on DVHs distance to clinical dose, dose homogeneity-based score, and conformity-based score.
+	}
 \end{table}
 
 \subsection{Qualitative Results}
