--- a/my_content.tex
+++ b/my_content.tex
@@ -36,7 +36,7 @@ This partial availability of data suggests the use of RL.
 
 \section{Materials and Methods}
 We introduce a new paradigm for reward-based dosimetrist RL agents.
-This new reward system aims to mimic human-optimized doses better.
+This new reward system aims to improve how human-optimized doses are mimicked.
 
 \subsection{Reinforcement Learning Reward}
 
@@ -49,27 +49,26 @@ This new reward system aims to mimic human-optimized doses better.
 
 In classical RL, we want $V(S_t) = R_t + \gamma V(S_{t+1})$
 (so the update is $V(S_t) \leftarrow (1-\alpha) V(S_t) + \alpha \left[ R_{t+1} + \gamma V(S_{t+1}) \right]$).
-In the context of dose optimization, the reward $R_t$ is defined as $R_t = \mathcal{E}(S_{t+1}) - \mathcal{E}(S_t)$.
-Where $\mathcal{E}$ is a function that evaluates the quality of a state (such that higher is better; if lower is better, then swap $s_t$ and $S_{t+1}$).
+In the context of dose optimization, the reward $R_t$ is defined as $R_t = \mathcal{E}(S_{t+1}) - \mathcal{E}(S_t)$, where $\mathcal{E}$ is a function that evaluates the quality of a state (such that higher is better; if lower is better, then swap $s_t$ and $S_{t+1}$).
 
 The evaluation $\mathcal{E}$ can be one or a mixture of the metrics mentioned in the introduction (Section \ref{metrics}) \cite{shen_hierarchical_2021} \cite{shen_intelligent_2019} \cite{moreau_reinforcement_2021}.
-This setup may leverage knowledge about which actions to perform instead of guessing randomly as a meta-optimizer would do.
-We can hope to gain some computation time.
+This setup may leverage knowledge about which actions to perform instead of guessing randomly, as a meta-optimizer would do.
+This could potentially gain some computation time.
 
 However, this technique does not use past plans; it only needs the optimizer inputs (CT, structures contours).
-We propose using the availability of past treatment plans to catch better the complexity of decisions made by dosimetrists and better match their expectations of a fully automatic treatment planning system.
+We propose using the availability of past treatment plans to improve the detection of the complexity of decisions made by dosimetrists and better match their expectations of a fully automatic treatment planning system.
 
 As developed in previous work, we can derive a distance between dose plans \cite{paul_dubois_novel_2024}.
 If we consider the clinical dose of past cases (used for training) as the best achievable one, we can evaluate a dose plan by computing its distance from the clinical dose plan.
 
 Let $D_t$ be the dose associated with $S_t$, and $D_C$ the clinical dose.
 We then define $\mathcal{E}(S_t) = \mathcal{D}(D_t, D_C)$.
-Since in that case, lower is better, we will define the reward as $$R_t = \mathcal{E}(S_t) - \mathcal{E}(S_{t+1}) = \mathcal{D}(D_t, D_C) - \mathcal{D}(D_{t+1}, D_C).$$
-This reward can be interpreted as the "distance gained to the clinical dose".
+Since in that case, $\mathcal{E}(S_t)$ should be minimized, we will define the reward as $$R_t = \mathcal{E}(S_t) - \mathcal{E}(S_{t+1}) = \mathcal{D}(D_t, D_C) - \mathcal{D}(D_{t+1}, D_C).$$
+This reward can be interpreted as the "distance gained to the clinical dose". 
 
 \subsection{Architecture}
 We use a dense neural network, which inputs the DVHs and current normalized weight values.
-It outputs the $Q(s, a)$ Value for each possible action $a$.
+It outputs the $Q(s, a)$ value for each possible action $a$.
 Dense layers are very prone to overfitting.
 In order to force the network to actually predict the following evaluation for each possible action, without overfitting, we incorporated a bottleneck in the network (figure \ref{fig:architecture}).
 Compressing the information stops the network from overfitting.
@@ -87,16 +86,15 @@ Networks with such architecture show very little difference between training and
 
 \subsection{Avoiding Off-Distribution}
 We generated a training set of over 125k actions (this took five days on an NVIDIA GeForce GTX 1080).
-Despite this relatively large dataset, we have not explored exhaustively the state-actions space, and the network still gets off distribution.
-This can easily be spotted when the predicted distance is negative; we choose to ignore those predictions.
-In fact, we ignore all outlier predictions.
+Despite this relatively large dataset, we have not explored exhaustively the state-actions space, and the network still gets off-distribution.%synonym for gets
+This can easily be spotted when the predicted distance is negative; we choose to ignore those predictions, and in fact all outlier predictions.
 The justification is that our set of actions is limited, no action will suddenly drastically improve the plan.
 It is the combination of several sequential actions that allows good plan optimization.
 Therefore, while testing, we choose the action with the best prediction, while passing the outlier test just mentioned.
 
 \section{Results}
 Figure \ref{fig:distance} shows how the distance between our RL agents performs over five steps on 30 test patients (unseen during the training).
-A lower distance is interpreted as a better dose, since it is closer to the best dose, which is the clinical one.
+A lower distance is interpreted as an improved dose, since it is closer to the best dose, which is the clinical one.
 \begin{figure*}
 	\centering
 	\includegraphics[width=0.6\textwidth]{DistanceToClinicalDose.pdf}
