--- a/my_content.tex
+++ b/my_content.tex
@@ -56,21 +56,21 @@ This setup may leverage knowledge about which actions to perform instead of gues
 This could potentially gain some computation time.
 
 However, this technique does not use past plans; it only needs the optimizer inputs (CT, structures contours).
-We propose using the availability of past treatment plans to improve the detection of the complexity of decisions made by dosimetrists and better match their expectations of a fully automatic treatment planning system.
+We propose using the availability of past treatment plans to more accurately reflect the complexity of decisions made by dosimetrists and better match their expectations of a fully automatic treatment planning system.
 
 As developed in previous work, we can derive a distance between dose plans \cite{paul_dubois_novel_2024}.
 If we consider the clinical dose of past cases (used for training) as the best achievable one, we can evaluate a dose plan by computing its distance from the clinical dose plan.
 
 Let $D_t$ be the dose associated with $S_t$, and $D_C$ the clinical dose.
 We then define $\mathcal{E}(S_t) = \mathcal{D}(D_t, D_C)$.
-Since in that case, $\mathcal{E}(S_t)$ should be minimized, we will define the reward as $$R_t = \mathcal{E}(S_t) - \mathcal{E}(S_{t+1}) = \mathcal{D}(D_t, D_C) - \mathcal{D}(D_{t+1}, D_C).$$
+Since, in that case, $\mathcal{E}(S_t)$ should be minimized, we will define the reward as $$R_t = \mathcal{E}(S_t) - \mathcal{E}(S_{t+1}) = \mathcal{D}(D_t, D_C) - \mathcal{D}(D_{t+1}, D_C).$$
 This reward can be interpreted as the "distance gained to the clinical dose". 
 
 \subsection{Architecture}
 We use a dense neural network, which inputs the DVHs and current normalized weight values.
 It outputs the $Q(s, a)$ value for each possible action $a$.
 Dense layers are very prone to overfitting.
-In order to force the network to actually predict the following evaluation for each possible action, without overfitting, we incorporated a bottleneck in the network (Ligure \ref{fig:architecture}).
+In order to force the network to actually predict the following evaluation for each possible action, without overfitting, we incorporated a bottleneck in the network (Figure \ref{fig:architecture}).
 Compressing the information stops the network from overfitting.
 Networks with such architecture show very little difference between training and validation sets (see Figure \ref{fig:losses_training}).
 
@@ -86,8 +86,8 @@ Networks with such architecture show very little difference between training and
 
 \subsection{Avoiding Off-Distribution}
 We generated a training set of over 125k actions (this took five days on an NVIDIA GeForce GTX 1080).
-Despite this relatively large dataset, we have not explored exhaustively the state-actions space, and the network still gets off-distribution.%synonym for gets
-This can easily be spotted when the predicted distance is negative; we choose to ignore those predictions, and in fact all outlier predictions.
+Despite this relatively large dataset, we have not explored exhaustively the state-actions space, and the network still lands off-distribution.
+This can easily be spotted when the predicted $Q$ value is greater than the current distance to the clinical dose; we choose to ignore those predictions, and in fact all outlier predictions.
 The justification is that our set of actions is limited, no action will suddenly drastically improve the plan.
 It is the combination of several sequential actions that allows good plan optimization.
 Therefore, while testing, we choose the action with the best prediction, while passing the outlier test just mentioned.
@@ -107,7 +107,7 @@ A lower distance is interpreted as an improved dose, since it is closer to the b
 The network converged on the training data, and validation showed minor overfitting.
 For testing, we generated 30 brand new cases that we again manually optimized.
 We then used the RL model to perform the optimization of these 30 unseen cases.
-On average, our model was able to reduce the dose distance with manually optimized dose by a factor of $2.5$ (from $2.2$ at iteration $0$ to $0.91$ at iteration $4$), as shown in Table \ref{table:results}.
+On average, our model was able to reduce the dose distance with manually optimized dose by a factor of $~3$ (from $~1.8$ at iteration $0$ to $~0.6$ at iteration $4$), as shown in Table \ref{table:results}.
 
 \begin{table}
 	\begin{center}
@@ -117,8 +117,8 @@ On average, our model was able to reduce the dose distance with manually optimiz
 			\hline
 			RL Distance Score & \textbf{0.612} & 1.871 & 0.406 \\ 
 			RL Homogeneity Score & 2.012 & \textbf{4.387} & 0.567 \\
-			RL Conformity Score &  1.781  & 4.232 & 0.451 \\
-			Meta-optimization & 1.279 & 4.117 & \textbf{0.610} \\
+			RL Conformity Score &  1.770  & 4.017 & 0.507 \\
+			Meta-optimization & N/A & 4.117 & \textbf{0.610} \\
 			\textit{Clinical doses} & \textit{0} & \textit{1.541} & \textit{0.580} \\	
 			\hline
 		\end{tabular}
